--- a/letter_quizapp/templates/letter_quizapp/verifysnippets/question.html
+++ b/letter_quizapp/templates/letter_quizapp/verifysnippets/question.html
@@ -2,10 +2,10 @@
 <style>
     #letter_quiz-verify-question {
         width: 100%;
-        padding-top:4rem;
+        padding-top:3rem;
     }
     #letter_quiz-verify-question .text-title{
-        font-size:  var(--fontsize-bold);
+        font-size:  var(--fontsize-title);
     }
     #letter_quiz-verify-question .text-quiz{
         font-size: inherit;
