--- a/letterapp/templates/letterapp/searchsnippets/guide.html
+++ b/letterapp/templates/letterapp/searchsnippets/guide.html
@@ -5,7 +5,7 @@
     }
 
     #letter-search-guide .text-title {
-        font-size: 1.8rem;
+        font-size:var(--fontsize-bold);
         font-weight: var(--fontweight-index);
     }
 
