--- a/accountapp/templates/accountapp/mailboxsnippets/intro.html
+++ b/accountapp/templates/accountapp/mailboxsnippets/intro.html
@@ -59,7 +59,7 @@
     flex-direction: row;
     width: 45%;
     height: 4rem;
-    font-size: var(--fontsize-bold);;
+    font-size: var(--fontsize-bold);
     font-weight: var(--fontweight-content);
     color: var(--white);
     flex-shrink: 0;
