--- a/homescreenapp/templates/homescreenapp/homescreensnippets/guide.html
+++ b/homescreenapp/templates/homescreenapp/homescreensnippets/guide.html
@@ -77,27 +77,26 @@
 </style>
 <style>
     #homescreen-homescreen-guide .item-decoration-top,
-    #homescreen-homescreen-guide .item-decoration-middle{
+    #homescreen-homescreen-guide .item-decoration-bottom{
         position: absolute;
         z-index: -1;
     }
 
     #homescreen-homescreen-guide .item-decoration-top {
-        background:var(--lightpink);
-        width: 38%;
-        height: 18%;
+        background:#fdf2f5;
+        width: 34%;
+        height: 23%;
         border-bottom-left-radius: 100% 100%;
         right: 0;
         top: 0%;
     }
-    #homescreen-homescreen-guide .item-decoration-middle{
-        background:var(--lightpink);
-        border-top-right-radius: 100% 50%;
-        border-bottom-right-radius: 100% 50%;
+    #homescreen-homescreen-guide .item-decoration-bottom{
+        background:#fdf2f5;
+        border-top-right-radius: 100% 100%;
         left: 0;
-        top: 41%;
-        width: 23%;
-        height: 20%;
+        bottom: 0%;
+        width: 33%;
+        height: 23%;
     }
 
 
@@ -108,7 +107,7 @@
             width: 20%;
             height: 21%;
         }
-        #homescreen-homescreen-guide .item-decoration-middle {
+        #homescreen-homescreen-guide .item-decoration-bottom {
             width: 12%;
             height: 40%;
         }
@@ -121,7 +120,7 @@
 
 <div class="frame-homescreen" id="homescreen-homescreen-guide" >
     <div class="item-decoration-top"></div>
-    <div class="item-decoration-middle"></div>
+    <div class="item-decoration-bottom"></div>
     <div class="text-title">
         소중한 사람에게 센스있는<br>
         나만의 편지를 선물해 보세요
