--- a/homescreenapp/templates/homescreenapp/homescreensnippets/save.html
+++ b/homescreenapp/templates/homescreenapp/homescreensnippets/save.html
@@ -58,27 +58,26 @@
 </style>
 <style>
     #homescreen-homescreen-save .item-decoration-top,
-    #homescreen-homescreen-save .item-decoration-middle{
+    #homescreen-homescreen-save .item-decoration-bottom{
         position: absolute;
         z-index: -1;
     }
 
     #homescreen-homescreen-save .item-decoration-top {
-        background:#fdf6e7;
-        width: 38%;
-        height: 18%;
-        border-bottom-left-radius: 100% 100%;
-        right: 0;
-        top: 0%;
-    }
-    #homescreen-homescreen-save .item-decoration-middle{
-        background:#fdf6e7;
-        border-top-right-radius: 100% 50%;
-        border-bottom-right-radius: 100% 50%;
+        background:#fdf9f2;
+        width: 33%;
+        height: 27%;
+        border-bottom-right-radius: 100% 100%;
         left: 0;
-        top: 41%;
-        width: 23%;
-        height: 20%;
+        top: 0;
+    }
+    #homescreen-homescreen-save .item-decoration-bottom{
+        background:#fdf9f2;
+        border-top-left-radius: 100% 100%;
+        right: 0;
+        bottom: 0;
+        width: 27%;
+        height: 23%;
     }
 
 
@@ -89,7 +88,7 @@
             width: 20%;
             height: 21%;
         }
-        #homescreen-homescreen-save .item-decoration-middle {
+        #homescreen-homescreen-save .item-decoration-bottom {
             width: 12%;
             height: 40%;
         }
@@ -100,7 +99,7 @@
 
 <div class="frame-homescreen tema-yellow" id="homescreen-homescreen-save" >
     <div class="item-decoration-top"></div>
-    <div class="item-decoration-middle"></div>
+    <div class="item-decoration-bottom"></div>
     <div class="text-title">
         <span class="text-title-bold">새로운 편지를 받으셨나요?</span><br>
         <span class="text-title-bold">삭제되지 않게 저장하세요!</span>
