--- a/letter_quizapp/templates/letter_quizapp/verifysnippets/question.html
+++ b/letter_quizapp/templates/letter_quizapp/verifysnippets/question.html
@@ -5,11 +5,11 @@
         padding-top:3rem;
     }
     #letter_quiz-verify-question .text-title{
-        font-size:  var(--fontsize-title);
+        font-size:  var(--fontsize-bold);
     }
     #letter_quiz-verify-question .text-quiz{
         font-size: inherit;
-        font-weight: var(--fontweight-content);
+        font-weight: var(--fontweight-index);
         color: var(--middlepink);
         margin-right: 0.5rem;
     }
