--- a/homescreenapp/templates/homescreenapp/homescreensnippets/review.html
+++ b/homescreenapp/templates/homescreenapp/homescreensnippets/review.html
@@ -72,8 +72,8 @@
 
     #homescreen-homescreen-review .item-decoration-top {
         background: #e3e7fc;
-        width: 38%;
-        height: 18%;
+        width: 27%;
+        height: 13%;
         border-bottom-left-radius: 100% 100%;
         right: 0;
         top: 0%;
@@ -116,7 +116,7 @@
         <div class="container container-review-left"  style="margin-top:3rem">
             <div class="item-arrow-right"></div>
                 <div class="spacing-horizontal interval-writer" >
-                    <span class="text-index interval-name">dlwns*** 님</span>
+                    <span class="text-index interval-name">rlath*** 님</span>
                     <span class="icon-star material-icons">grade</span>
                     <span class="icon-star material-icons">grade</span>
                     <span class="icon-star material-icons">grade</span>
@@ -124,8 +124,8 @@
                     <span class="icon-star material-icons">grade</span>
                 </div>
             <div class="text-content" >
-                사랑하는 여자친구가 이벤트로 너무
-                좋아해서 뿌듯해요 ㅠㅠ
+                처음 해봤는데 문제 푸는 재미 덕분에
+                더 친해진 것 같아요!
             </div>
         </div>
     </div>
@@ -141,7 +141,7 @@
                     <span class="icon-star material-icons">grade</span>
                 </div>
             <div class="text-content">
-                애인이 너무 좋아해서 가족과 지인들에게도 보내봤는데 너무 재밌어 하네요
+                애인뿐 아니라 가족과 지인들과 함께 해보니 다들 너무 재밌어 해요 ㅎㅎ
             </div>
         </div>
     </div>
@@ -149,7 +149,7 @@
         <div class="container container-review-left" >
             <div class="item-arrow-right"></div>
             <div class="spacing-horizontal interval-writer" >
-                    <span class="text-index interval-name">whrud*** 님</span>
+                    <span class="text-index interval-name">xhxhr*** 님</span>
                     <span class="icon-star material-icons">grade</span>
                     <span class="icon-star material-icons">grade</span>
                     <span class="icon-star material-icons">grade</span>
@@ -158,7 +158,7 @@
                 </div>
             <div class="text-content" >
                 직접 편지 쓰기는 부끄럽지만 이렇게
-                보내니까 재밌고 유쾌해서 좋아요!
+                보내니까 재밌고 참신해서 좋아요
             </div>
         </div>
     </div>
@@ -174,7 +174,7 @@
                     <span class="icon-star material-icons">grade</span>
                 </div>
             <div class="text-content" >
-                매일 꾸준히 보내는데 커플끼리 더 돈독해지고 모아보는 재미가 쏠쏠해요
+                추억 담긴 사진과 글을 작성하면서 남자친구와 더 친해진 것 같아요!!
             </div>
         </div>
     </div>
