--- a/homescreenapp/templates/homescreenapp/createguide.html
+++ b/homescreenapp/templates/homescreenapp/createguide.html
@@ -110,7 +110,7 @@
         </div>
         <div class="spacing-content">
             <span class="icon-number material-icons">done</span>
-            <span class="text-content">편지 확인 전까지 삭제/수정해요!</span>
+            <span class="text-content">편지 저장 전까지 삭제/수정해요!</span>
         </div>
         <div class="spacing-content">
             <span class="icon-number material-icons">done</span>
