--- a/letterapp/templates/letterapp/detailsnippets/intro.html
+++ b/letterapp/templates/letterapp/detailsnippets/intro.html
@@ -67,4 +67,4 @@
     </div>
 </div>
 
-<script src="{% static 'js/copyLetterUrl.js' %}"></script>
+<script src="{% static 'js/copySearchUrl.js' %}"></script>
