--- a/letterapp/templates/letterapp/resultsnippets/btn.html
+++ b/letterapp/templates/letterapp/resultsnippets/btn.html
@@ -1,5 +1,5 @@
 
-{% if not target_letter.is_checked %}
+{% if target_letter.state == 'unchecked' %}
 <a href="{% url 'letter_infoapp:update' pk=target_letter.letter_info.pk %}" class="btn-edit-fixed material-icons">edit</a>
 <form action="{% url 'letterapp:delete' pk=target_letter.pk %}" method="post"
       id="letter-delete-form">
