--- a/letterapp/templates/letterapp/resultsnippets/link.html
+++ b/letterapp/templates/letterapp/resultsnippets/link.html
@@ -62,7 +62,7 @@
 
 <div class="frame" id="letter-result-link">
     <div class="spacing-container">
-        <a class="container" download >
+        <a href="{{ target_letter.qr.url }}" download="QRCode.png" class="container" >
             <div class="item-image">
                 <img class="image-qr" src='/static/icons/guide/qrcode.png'>
             </div>
