--- a/templates/headersnippets/download.html
+++ b/templates/headersnippets/download.html
@@ -1,5 +1,5 @@
 
-<button id="btn-download" class="material-icons btn-download" >downloading
+<button id="btn-download" class="btn-download" >저장
 </button>
 
 
