--- a/letterapp/templates/letterapp/detail.html
+++ b/letterapp/templates/letterapp/detail.html
@@ -1,39 +1,26 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
+
 <style>
 #letter-detail{
     padding-bottom:6rem;
 }
+
 </style>
-
-<script>
-    history.pushState(null, null, location.href);
-
-// 뒤로라기 이벤트감지 -> 현재페이지로 이동
-    window.onpopstate = function() {
-        history.go(1);
-    }
-</script>
 
 <header id="header-letter-detail">
         {% if user == target_letter.sender or user == target_letter.receiver %}
         {% include 'headersnippets/like.html' %}
-        {% include 'headersnippets/download.html'%}
         {% endif %}
         {%  url 'letterapp:intro' pk=target_letter.pk as url %}
         {% include 'headersnippets/exit.html' with url=url %}
 </header>
-
 <main class="tema-{{ letter_content.tema }}" id="letter-detail">
     {% include 'letterapp/detailsnippets/intro.html' %}
     {% include 'letterapp/detailsnippets/content.html' %}
     {% include 'letterapp/detailsnippets/warning.html' %}
 </main>
-
+<div style="height: 6rem" class="tema-{{ letter_content.tema }} "></div>
 {% include 'letterapp/detailsnippets/footer.html' %}
-
-
 {% endblock %}
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
