--- a/letterapp/templates/letterapp/detailsnippets/warning.html
+++ b/letterapp/templates/letterapp/detailsnippets/warning.html
@@ -4,6 +4,7 @@
         bottom: 0.2rem;
     }
 </style>
+{% if target_letter.state == 'checked' and not user == target_letter.sender %}
 <div id="letter-detail-warning" class="frame-zoom-info">
     <div class="container">
         <div class="item-exit">
@@ -43,6 +44,7 @@
         </div>
     </div>
 </div>
+{% endif %}
 <script>
 window.onload = function() {
     var warning = document.getElementById('letter-detail-warning');
@@ -50,6 +52,7 @@ window.onload = function() {
     // This event listener will handle the click to immediately start the fade-out
     warning.addEventListener('click', function() {
         warning.style.opacity = "0";
+        warning.style.display = "none";
         // The CSS transition will take care of the smooth fade out, no setTimeout needed here for opacity change
     });
 
