--- a/letterapp/templates/letterapp/searchsnippets/form.html
+++ b/letterapp/templates/letterapp/searchsnippets/form.html
@@ -1,8 +1,30 @@
 {% load bootstrap4 %}
-
-<div class="frame-letter " id="letter-urlsearch">
-      <form action="{% url 'letterapp:search' %}?type=url" method="post" >
+<style>
+#letter-urlsearch-form{
+    padding-top:0
+}
+#letter-urlsearch-form .icon-paste {
+    position: absolute;
+    top:1.3rem;
+    right: 1rem;
+    background: var(--gray);
+    border-radius: 0.5rem;
+    padding:0.6rem 0.5rem;
+    color: var(--white);
+    font-weight: 400;
+    font-size: 1.35rem;
+}
+</style>
+<div class="frame-letter " id="letter-urlsearch-form">
+      <form action="{% url 'letterapp:search' %}?type=url" method="post" style="position: relative">
         {% csrf_token %}{% bootstrap_form form %}
+          <button type="button" id="pasteButton" onclick="pasteClipboard()" class="icon-paste material-icons">content_paste</button>
         <input type="submit" class="btn-submit-fixed"  value="링크로 편지 찾기">
       </form>
 </div>
+<script>
+    function pasteClipboard() {
+        navigator.clipboard.readText().then(
+            clipText => document.querySelector('.field-letter_url').value = clipText ? clipText : 'none');
+    }
+</script>
