--- a/static/css/zoom.css
+++ b/static/css/zoom.css
@@ -55,13 +55,13 @@
     display: flex;
     flex-direction:column;
     justify-content:space-between;
-    align-items: flex-start;
+    align-items: center;
     padding:0rem;
 }
 
 .frame-zoom-info .item-exit{
     width: 100%;
-    height:4rem;
+    height:4.2rem;
     border-top-left-radius:  var(--border-radius-container);
     border-top-right-radius:var(--border-radius-container);
     background:var(--lightpink);
@@ -73,7 +73,7 @@
 }
 
 .frame-zoom-info .item-content{
-    width: 100%;
+    width: fit-content;
     border-bottom-left-radius: var(--border-radius-container);
     border-bottom-right-radius: var(--border-radius-container);
     background:var(--whitepink);
@@ -81,14 +81,13 @@
     flex-direction:column;
     justify-content:flex-start;
     align-items: flex-start;
-    padding: 2.5rem 2rem 4rem 2rem;
+    padding: 2.5rem 2rem 3.5rem 2rem;
 
 }
 .frame-zoom-info .spacing-title{
     justify-content: center;
-    padding-left: 0.5rem;
     padding-right:0;
-    margin-bottom: 2.3rem;
+    margin-bottom: 2rem;
 }
 .frame-zoom-info .img-title{
     width: 1.8rem;
@@ -103,6 +102,7 @@
 }
 
 .frame-zoom-info .text-content{
+    width: fit-content;
     font-size: var(--fontsize-bold);
 }
 .frame-zoom-info .interval-content{
