--- a/letter_quizapp/templates/letter_quizapp/listsnippets/zoom.html
+++ b/letter_quizapp/templates/letter_quizapp/listsnippets/zoom.html
@@ -67,4 +67,4 @@
         </a>
     </div>
 </button>
-<script src="{% static 'js/showimage.js' %}"></script>
+<script src="{% static 'js/showImage.js' %}"></script>
