--- a/letter_quizapp/templates/letter_quizapp/verifysnippets/question.html
+++ b/letter_quizapp/templates/letter_quizapp/verifysnippets/question.html
@@ -65,4 +65,4 @@
     </button>
     {% endif %}
 </div>
-<script src="{% static 'js/showimage.js' %}"></script>
+<script src="{% static 'js/showImage.js' %}"></script>
