--- a/letterapp/templates/letterapp/detailsnippets/content.html
+++ b/letterapp/templates/letterapp/detailsnippets/content.html
@@ -93,4 +93,4 @@
     </span>
     </div>
 </div>
-<script src="{% static 'js/showimage.js' %}"></script>
+<script src="{% static 'js/showImage.js' %}"></script>
