--- a/letterapp/templates/letterapp/detailsnippets/intro.html
+++ b/letterapp/templates/letterapp/detailsnippets/intro.html
@@ -60,7 +60,7 @@
             <span class="text-title">To. {{ letter_info.receiver_name }}</span>
             <div class="line-title"></div>
         </div>
-        <button onclick="copyLetterUrl()" class="btn-url" data-url="{{ target_letter.url }}">
+        <button onclick="copySearchUrl()" class="btn-url" data-url="{{ target_letter.url }}">
             <div class="text-content text-id">편지 링크</div>
             <span class="icon-copy material-icons">content_copy</span>
         </button>
