--- a/letterapp/templates/letterapp/searchsnippets/form.html
+++ b/letterapp/templates/letterapp/searchsnippets/form.html
@@ -24,7 +24,15 @@
 </div>
 <script>
     function pasteClipboard() {
-        navigator.clipboard.readText().then(
-            clipText => document.querySelector('.field-letter_url').value = clipText ? clipText : 'none');
+        navigator.clipboard.readText().then(clipText => {
+            // Check if clipText starts with the required URL
+            if (clipText.startsWith('https://tinyurl.com/')) {
+                document.querySelector('.field-letter_url').value = clipText;
+            } else {
+                // Optionally, clear the field or leave it unchanged
+                document.querySelector('.field-letter_url').value = '';
+                // Or, if you prefer to leave the field unchanged, remove the line above
+            }
+        });
     }
 </script>
