--- a/homescreenapp/templates/homescreenapp/createguide.html
+++ b/homescreenapp/templates/homescreenapp/createguide.html
@@ -25,7 +25,7 @@
     }
 
     #letter-creatguide .text-content {
-        font-size: var(--fontsize-bold);
+       font-size: var(--fontsize-title);
     }
 
     #letter-creatguide .spacing-content {
