--- a/templates/head.html
+++ b/templates/head.html
@@ -3,16 +3,16 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="From.XoXo">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="/static/images/logo.png">
     {% if intro_page %}
-    <meta property="og:image" content="/static/images/letterimage.png">
     <meta property="og:description" content="새로운 편지가 도착했어요!">
     {% else %}
-    <meta property="og:description" content="소중한 사람에게 작성하는 편지">
-    <meta property="og:image" content="/static/images/logoimage.png">
+    <meta property="og:description" content="독특한 편지를 제작하고 공유해요!">
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
     <link rel="short icon" href="#">
     <title>From.XoXo</title>
+    <meta property="og:url" content="www.fromxoxo.com">
 
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
