--- a/letterapp/templates/letterapp/detailsnippets/footer.html
+++ b/letterapp/templates/letterapp/detailsnippets/footer.html
@@ -44,7 +44,7 @@
 }
 </style>
 {% if not user.is_authenticated %}
-    <a href="{% url 'accountapp:login' %}?letter_pk={{ target_letter.pk }}" class="frame-footer">
+    <a href="{% url 'accountapp:login' %}" class="frame-footer">
         <div class="container-footer">
             <span class="text-title">
                로그인 후 편지 저장!
