--- a/letterapp/templates/letterapp/detailsnippets/warning.html
+++ b/letterapp/templates/letterapp/detailsnippets/warning.html
@@ -1,13 +1,25 @@
 {% load static %}
 <style>
-    #frame-zoom-warning .img-congratulate{
-        position: relative;
-        bottom: 0.2rem;
+
+    #frame-zoom-warning .item-btn{
+        height: var(--height-header);
+        width: 6rem;
+        padding-left: var(--padding-header);
+        position: fixed;
+        left: 0;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content:flex-start;
+        align-items: center;
     }
+
+
 </style>
 
 {% if target_letter.state == 'checked' and not user == target_letter.sender %}
 <button onclick="closeWarning()" id="frame-zoom-warning" class="frame-zoom-warning">
+    <div class="item-btn"><span class="btn-guide-clicked material-icons">question_mark</span></div>
     <div class="container">
         <div class="item-exit">
             <div class="material-icons btn-exit">cancel</div>
@@ -17,7 +29,6 @@
             <span class="text-title">
                 편지의 내용을 확인했어요!
             </span>
-            <img class="img-title img-congratulate" src='/static/icons/etc/congratulate.png'>
             </div>
             <div class="spacing-horizontal interval-content">
                 <span class="icon-check material-icons">done</span>
@@ -46,7 +57,6 @@
         </div>
     </div>
 </button>
-<button onclick="showWarning()" class="item-image">
-</button>
+
 {% endif %}
 <script src="{% static 'js/showWarning.js' %}"></script>
