--- a/templates/head.html
+++ b/templates/head.html
@@ -7,7 +7,7 @@
     {% if intro_page %}
     <meta property="og:description" content="새로운 편지가 도착했어요!">
     {% else %}
-    <meta property="og:description" content="독특한 편지를 제작하고 공유해요!">
+    <meta property="og:description" content="나만의 재밌는 편지를 선물해요">
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
     <link rel="short icon" href="#">
