--- a/letterapp/templates/letterapp/resultsnippets/preview.html
+++ b/letterapp/templates/letterapp/resultsnippets/preview.html
@@ -13,7 +13,7 @@
     color: var(--black);
 }
 </style>
-<a href="{% url 'letterapp:intro' pk=target_letter.pk %}" class="frame" id="letter-result-preview">
+<a href="{% url 'letter_quizapp:verify' pk=initial_letter.pk %}" class="frame" id="letter-result-preview">
     <div  class="container" >
         <div class="item">
         <span class="text-content-bold" >{{ target_letter.letter_info.title|truncatechars:23 }}</span>
